--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@types/uuid": "^10.0.0",
     "idb": "^8.0.3",
     "immer": "^10.1.1",
     "next": "15.3.2",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
