--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@types/uuid": "^10.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "idb": "^8.0.3",
     "immer": "^10.1.1",
+    "lucide-react": "^0.545.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.4",
     "zustand": "^5.0.4"
@@ -35,6 +39,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
