--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "idb": "^8.0.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.545.0",
